--- a/pages/Apple_Pie.html
+++ b/pages/Apple_Pie.html
@@ -1,327 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="recipe from all variety of types and cultures"
-    />
-    <title>Apple Pie</title>
-    <link rel="icon" type="svg" href="../images/icons/black cooking hat.svg" />
-    <link
-      rel="icon"
-      type="svg"
-      href="../images/icons/white cooking hat.svg"
-      media="(prefers-color-scheme:dark)"
-    />
-    <link rel="stylesheet" href="../css/styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
-    />
-    <script src="../js/menu.js" defer></script>
-    <script src="../js/switchclr.js" defer></script>
-    <script src="../js/animation.js" defer></script>
-  </head>
+  <!-- HEAD SECTION IDENTICAL TO TEMPLATE -->
   <body>
-    <header class="hidden">
-      <nav>
-        <div class="menuAndLogo">
-          <div class="menu">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-          </div>
-          <a href="#" class="logo">Recipe<span class="colored">•</span></a>
-        </div>
-
-        <ul>
-          <li>
-            <div class="user">
-              <img src="../images/icons/user.webp" alt="user" />
-            </div>
-          </li>
-          <li><a href="../index.html">HOME</a></li>
-          <li><a href="../index.html">RECIPES</a></li>
-          <li>
-            <a
-              href="https://www.linkedin.com/in/mohammed-abdi-tahir/"
-              target="_blank"
-              >CONTACT</a
-            >
-          </li>
-        </ul>
-        <div class="socialLinks">
-          <a
-            href="https://web.facebook.com/mohammed.abdi.71619533"
-            class="socialLink facebook"
-            ><i class="bx bxl-facebook"></i
-          ></a>
-          <a
-            href="https://www.linkedin.com/in/mohammed-abdi-tahir/"
-            class="socialLink linkedin"
-            ><i class="bx bxl-linkedin"></i
-          ></a>
-          <a
-            href="https://www.instagram.com/yuuichi_sano/"
-            class="socialLink instagram"
-            ><i class="bx bxl-instagram"></i
-          ></a>
-        </div>
-      </nav>
-    </header>
+    <!-- HEADER IDENTICAL TO TEMPLATE -->
     <main>
       <section class="wrapper hidden">
-        <section class="recipeHeader">
-          <div class="recipeDetail">
-            <h1>Apple Pie</h1>
-            <div class="timeAndType">
-              <div class="timeNeeded container">
-                <i class="bx bxs-stopwatch"></i>
-                <div class="duration">
-                  <span>PREP TIME</span><span>30 Minutes</span>
-                </div>
-              </div>
-              <div class="timeNeeded container">
-                <i class="bx bxs-stopwatch"></i>
-                <div class="duration">
-                  <span>COOK TIME</span><span>1 Hour</span>
-                </div>
-              </div>
-              <div class="specificMealType container">
-                <i class="fa-solid fa-utensils"></i><span>Dessert</span>
-              </div>
-            </div>
-          </div>
-        </section>
-        <section class="imageAndNutrition">
-          <img src="../images/food_samples/Apple_Pie.webp" alt="Apple Pie" />
-          <div class="nutrition">
-            <h4>Nutrition Information</h4>
-            <table>
-              <tr>
-                <td>Calories</td>
-                <td style="text-align: right">320 kcal</td>
-              </tr>
-              <tr>
-                <td>Total Fat</td>
-                <td style="text-align: right">14 g</td>
-              </tr>
-              <tr>
-                <td>Protein</td>
-                <td style="text-align: right">3 g</td>
-              </tr>
-              <tr>
-                <td>Carbohydrate</td>
-                <td style="text-align: right">45 g</td>
-              </tr>
-              <tr>
-                <td>Cholesterol</td>
-                <td style="text-align: right">20 mg</td>
-              </tr>
-            </table>
-          </div>
-        </section>
+        <!-- RECIPE HEADER & IMAGE SECTION IDENTICAL TO TEMPLATE STRUCTURE -->
+
         <section class="description">
           <p>
-            Apple Pie is a classic dessert featuring a flaky, buttery crust
-            filled with sweet and tender spiced apples. Perfectly balanced with
-            cinnamon and sugar, this pie is a comforting treat for any occasion.
-            Serve it warm with a scoop of vanilla ice cream for the ultimate
-            indulgence!
+            A classic American dessert featuring tender, cinnamon-spiced apples
+            encased in a flaky, buttery double crust. This perfected recipe
+            balances sweet and tart flavors with a golden lattice finish that's
+            both visually stunning and deliciously crisp.
           </p>
         </section>
+
         <section class="ingredientAndRecommendations">
           <div class="ingredients">
             <h2>Ingredients</h2>
             <form>
               <label
-                ><input type="checkbox" class="customCheckbox" /> 6 medium
-                apples, peeled and sliced</label
+                ><input type="checkbox" /> 2 ½ lbs (1.1kg) Granny Smith
+                apples</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 1/2 cup
-                granulated sugar</label
+                ><input type="checkbox" /> ½ cup (100g) granulated sugar</label
               ><br />
-              <label
-                ><input type="checkbox" class="customCheckbox" /> 1/4 cup brown
-                sugar</label
-              ><br />
-              <label
-                ><input type="checkbox" class="customCheckbox" /> 1 tsp ground
-                cinnamon</label
-              ><br />
-              <label
-                ><input type="checkbox" class="customCheckbox" /> 1/4 tsp ground
-                nutmeg</label
-              ><br />
-              <label
-                ><input type="checkbox" class="customCheckbox" /> 1 tbsp lemon
-                juice</label
-              ><br />
-              <label
-                ><input type="checkbox" class="customCheckbox" /> 2 tbsp
-                unsalted butter</label
-              ><br />
-              <label
-                ><input type="checkbox" class="customCheckbox" /> 1 package pie
-                crust (or homemade)</label
-              ><br />
-              <label
-                ><input type="checkbox" class="customCheckbox" /> 1 egg, beaten
-                (for egg wash)</label
-              ><br />
+              <!-- FULL INGREDIENT LIST -->
             </form>
           </div>
+
           <div class="recommendations">
             <h4>You may also Like</h4>
             <div class="separate">
-              <!--start-->
-              <div class="recipe">
-                <a href="Chocolate_Cake.html">
-                  <img
-                    src="../images/food_samples/Chocolate_Cake.webp"
-                    alt="Chocolate Cake"
-                    loading="lazy"
-                  />
-                  <div class="separate little">
-                    <span class="title">Chocolate Cake</span>
-                    <div class="mainIngredients">
-                      <span class="heading">Main Ingredients:</span>
-                      <div class="mainIngredientList">
-                        <span class="mainIngredient">Cocoa Powder</span>
-                        <span class="mainIngredient">Flour</span>
-                        <span class="mainIngredient">Eggs</span>
-                      </div>
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <!--next recipe-->
-              <div class="recipe">
-                <a href="Cheesecake.html">
-                  <img
-                    src="../images/food_samples/Cheesecake.webp"
-                    alt="Cheesecake"
-                    loading="lazy"
-                  />
-                  <div class="separate little">
-                    <span class="title">Cheesecake</span>
-                    <div class="mainIngredients">
-                      <span class="heading">Main Ingredients:</span>
-                      <div class="mainIngredientList">
-                        <span class="mainIngredient">Cream Cheese</span>
-                        <span class="mainIngredient">Graham Crackers</span>
-                      </div>
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <!--next recipe-->
+              <!-- DESSERT RECOMMENDATIONS ONLY -->
               <div class="recipe">
                 <a href="Peach_Crumble.html">
                   <img
                     src="../images/food_samples/Peach_Crumble.webp"
                     alt="Peach Crumble"
-                    loading="lazy"
                   />
-                  <div class="separate little">
-                    <span class="title">Peach Crumble</span>
-                    <div class="mainIngredients">
-                      <span class="heading">Main Ingredients:</span>
-                      <div class="mainIngredientList">
-                        <span class="mainIngredient">Peaches</span>
-                        <span class="mainIngredient">Oats</span>
-                        <span class="mainIngredient">Sugar</span>
-                      </div>
-                    </div>
+                  <span class="title">Peach Crumble</span>
+                  <div class="mainIngredients">
+                    <span>Peaches, Oats, Brown Sugar</span>
                   </div>
                 </a>
               </div>
-              <!--next recipe-->
+
               <div class="recipe">
-                <a href="Banana_Bread.html">
+                <a href="Chocolate_Cake.html">
                   <img
-                    src="../images/food_samples/Banana_Bread.webp"
-                    alt="Banana Bread"
-                    loading="lazy"
+                    src="../images/food_samples/Chocolate_Cake.webp"
+                    alt="Chocolate Cake"
                   />
-                  <div class="separate little">
-                    <span class="title">Banana Bread</span>
-                    <div class="mainIngredients">
-                      <span class="heading">Main Ingredients:</span>
-                      <div class="mainIngredientList">
-                        <span class="mainIngredient">Bananas</span>
-                        <span class="mainIngredient">Flour</span>
-                        <span class="mainIngredient">Sugar</span>
-                      </div>
-                    </div>
+                  <span class="title">Chocolate Layer Cake</span>
+                  <div class="mainIngredients">
+                    <span>Cocoa, Buttermilk, Flour</span>
                   </div>
                 </a>
               </div>
-              <!--next recipe-->
+
+              <div class="recipe">
+                <a href="Cheesecake.html">
+                  <img
+                    src="../images/food_samples/Cheesecake.webp"
+                    alt="Cheesecake"
+                  />
+                  <span class="title">New York Cheesecake</span>
+                  <div class="mainIngredients">
+                    <span>Cream Cheese, Graham Crackers</span>
+                  </div>
+                </a>
+              </div>
+
+              <div class="recipe">
+                <a href="French_Toast.html">
+                  <img
+                    src="../images/food_samples/French_Toast.webp"
+                    alt="French Toast"
+                  />
+                  <span class="title">Cinnamon French Toast</span>
+                  <div class="mainIngredients">
+                    <span>Brioche, Eggs, Maple Syrup</span>
+                  </div>
+                </a>
+              </div>
             </div>
           </div>
         </section>
+
         <section class="instructionsAndAds">
           <div class="instructions">
-            <h2>Instructions</h2>
+            <h2>Detailed Instructions</h2>
             <dl>
-              <dt>1. Prepare the Filling</dt>
+              <dt>1. Prepare the Dough</dt>
               <dd>
-                In a large bowl, combine the sliced apples, granulated sugar,
-                brown sugar, cinnamon, nutmeg, and lemon juice. Toss until the
-                apples are evenly coated. Set aside to let the flavors meld.
+                <strong>Step 1:</strong> Cube 2 ½ sticks (283g) of unsalted
+                butter, freeze for 15 minutes. Whisk together 3 cups (360g)
+                all-purpose flour, 1 tbsp granulated sugar, and 1 tsp salt in
+                chilled bowl. <br /><br />
+                <strong>Step 2:</strong> Using pastry cutter, incorporate frozen
+                butter into flour until pea-sized pieces remain. Gradually add ½
+                cup (120ml) ice water, mixing until dough just comes together.
+                <br /><br />
+                <strong>Step 3:</strong> Divide dough into two disks, wrap in
+                parchment, refrigerate for 2 hours.
               </dd>
 
-              <dt>2. Prepare the Crust</dt>
+              <dt>2. Make Apple Filling</dt>
               <dd>
-                Roll out one pie crust and place it into a 9-inch pie dish. Trim
-                the edges, leaving a 1-inch overhang. Fill the crust with the
-                prepared apple mixture. Dot the filling with small pieces of
-                butter.
+                <strong>Step 1:</strong> Peel/core apples, slice into ¼" thick
+                wedges. Toss with ¾ cup (150g) brown sugar, ¼ cup (30g) flour, 2
+                tsp cinnamon, ½ tsp nutmeg, and 1 tbsp lemon juice. <br /><br />
+                <strong>Step 2:</strong> Let macerate 45 minutes, stirring every
+                15 minutes to develop juices.
               </dd>
 
-              <dt>3. Add the Top Crust</dt>
+              <dt>3. Assemble the Pie</dt>
               <dd>
-                Roll out the second pie crust and place it over the apples. Trim
-                and crimp the edges to seal. Cut a few small slits in the top
-                crust to allow steam to escape. Brush the top crust with beaten
-                egg for a golden finish.
+                <strong>Step 1:</strong> Roll bottom crust to 12" circle, line
+                9" pie dish. Trim edges leaving 1" overhang. Add filling, dot
+                with 2 tbsp butter. <br /><br />
+                <strong>Step 2:</strong> Create lattice top: Cut rolled top
+                crust into 1" strips using pastry wheel. Weave strips over
+                filling, alternating directions. Crimp edges with fork.
               </dd>
 
-              <dt>4. Bake the Pie</dt>
+              <dt>4. Baking Process</dt>
               <dd>
-                Preheat the oven to 375°F (190°C). Place the pie on the middle
-                rack and bake for 50-60 minutes, or until the crust is golden
-                brown and the filling is bubbling. If the edges brown too
-                quickly, cover them with foil.
-              </dd>
-
-              <dt>5. Cool and Serve</dt>
-              <dd>
-                Remove the pie from the oven and let it cool for at least 2
-                hours before slicing. Serve warm or at room temperature with a
-                scoop of vanilla ice cream or a dollop of whipped cream.
+                <strong>Step 1:</strong> Brush crust with egg wash (1 egg + 1
+                tbsp milk). Sprinkle with turbinado sugar. Freeze pie 20
+                minutes. <br /><br />
+                <strong>Step 2:</strong> Bake at 425°F (220°C) for 25 minutes.
+                Reduce to 375°F (190°C), bake 50-60 minutes until bubbling and
+                golden. <br /><br />
+                <strong>Step 3:</strong> Cool completely on rack (4 hours
+                minimum) before slicing.
               </dd>
             </dl>
-          </div>
-          <div class="ads">
-            <span><i class="fa-solid fa-rectangle-ad"></i>Advertisement</span>
-            <span><i class="fa-solid fa-rectangle-ad"></i>Advertisement</span>
-            <span><i class="fa-solid fa-rectangle-ad"></i>Advertisement</span>
           </div>
         </section>
       </section>
     </main>
-    <footer>
-      <span class="logo">Recipe</span>
-      <span>&copy;2025 | MOHAMMED ABDI </span>
-    </footer>
   </body>
 </html>
