--- a/pages/Chicken_Skewers.html
+++ b/pages/Chicken_Skewers.html
@@ -184,48 +184,6 @@
             <div class="separate">
               <!-- start -->
               <div class="recipe">
-                <a href="Apple_Pie.html">
-                  <img
-                    src="../images/food_samples/Apple_Pie.webp"
-                    alt="Apple Pie"
-                    loading="lazy"
-                  />
-                  <div class="separate little">
-                    <span class="title">Apple Pie</span>
-                    <div class="mainIngredients">
-                      <span class="heading">Main Ingredients:</span>
-                      <div class="mainIngredientList">
-                        <span class="mainIngredient">Apples</span>
-                        <span class="mainIngredient">Sugar</span>
-                        <span class="mainIngredient">Cinnamon</span>
-                      </div>
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <!-- next recipe -->
-              <div class="recipe">
-                <a href="Spaghetti_Bolognese.html">
-                  <img
-                    src="../images/food_samples/Spaghetti_Bolognese.webp"
-                    alt="Spaghetti Bolognese"
-                    loading="lazy"
-                  />
-                  <div class="separate little">
-                    <span class="title">Spaghetti Bolognese</span>
-                    <div class="mainIngredients">
-                      <span class="heading">Main Ingredients:</span>
-                      <div class="mainIngredientList">
-                        <span class="mainIngredient">Ground Beef</span>
-                        <span class="mainIngredient">Tomatoes</span>
-                        <span class="mainIngredient">Pasta</span>
-                      </div>
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <!-- next recipe -->
-              <div class="recipe">
                 <a href="Grilled_Chicken.html">
                   <img
                     src="../images/food_samples/Grilled_Chicken_with_Herb_Marinade.webp"
@@ -240,8 +198,8 @@
                       <span class="heading">Main Ingredients:</span>
                       <div class="mainIngredientList">
                         <span class="mainIngredient">Chicken</span>
-                        <span class="mainIngredient">Olive Oil</span>
                         <span class="mainIngredient">Herbs</span>
+                        <span class="mainIngredient">Olive Oil</span>
                       </div>
                     </div>
                   </div>
@@ -262,6 +220,48 @@
                       <div class="mainIngredientList">
                         <span class="mainIngredient">Beef</span>
                         <span class="mainIngredient">Vegetables</span>
+                        <span class="mainIngredient">Soy Sauce</span>
+                      </div>
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <!-- next recipe -->
+              <div class="recipe">
+                <a href="Lamb_Chops.html">
+                  <img
+                    src="../images/food_samples/Grilled_Lamb_Chops.webp"
+                    alt="Grilled Lamb Chops"
+                    loading="lazy"
+                  />
+                  <div class="separate little">
+                    <span class="title">Grilled Lamb Chops</span>
+                    <div class="mainIngredients">
+                      <span class="heading">Main Ingredients:</span>
+                      <div class="mainIngredientList">
+                        <span class="mainIngredient">Lamb</span>
+                        <span class="mainIngredient">Rosemary</span>
+                        <span class="mainIngredient">Garlic</span>
+                      </div>
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <!-- next recipe -->
+              <div class="recipe">
+                <a href="Vegetable_Stir.html">
+                  <img
+                    src="../images/food_samples/Vegetable_Stir_Fry.webp"
+                    alt="Vegetable Stir Fry"
+                    loading="lazy"
+                  />
+                  <div class="separate little">
+                    <span class="title">Vegetable Stir Fry</span>
+                    <div class="mainIngredients">
+                      <span class="heading">Main Ingredients:</span>
+                      <div class="mainIngredientList">
+                        <span class="mainIngredient">Broccoli</span>
+                        <span class="mainIngredient">Carrots</span>
                         <span class="mainIngredient">Soy Sauce</span>
                       </div>
                     </div>
