--- a/pages/Spaghetti_Bolognese.html
+++ b/pages/Spaghetti_Bolognese.html
@@ -60,18 +60,21 @@
           <a
             href="https://web.facebook.com/mohammed.abdi.71619533"
             class="socialLink facebook"
-            ><i class="bx bxl-facebook"></i
-          ></a>
+          >
+            <i class="bx bxl-facebook"></i>
+          </a>
           <a
             href="https://www.linkedin.com/in/mohammed-abdi-tahir/"
             class="socialLink linkedin"
-            ><i class="bx bxl-linkedin"></i
-          ></a>
+          >
+            <i class="bx bxl-linkedin"></i>
+          </a>
           <a
             href="https://www.instagram.com/yuuichi_sano/"
             class="socialLink instagram"
-            ><i class="bx bxl-instagram"></i
-          ></a>
+          >
+            <i class="bx bxl-instagram"></i>
+          </a>
         </div>
       </nav>
     </header>
@@ -84,17 +87,17 @@
               <div class="timeNeeded container">
                 <i class="bx bxs-stopwatch"></i>
                 <div class="duration">
-                  <span>PREP TIME</span><span>15 Minutes</span>
+                  <span>PREP TIME</span><span>20 Minutes</span>
                 </div>
               </div>
               <div class="timeNeeded container">
                 <i class="bx bxs-stopwatch"></i>
                 <div class="duration">
-                  <span>COOK TIME</span><span>30 Minutes</span>
+                  <span>COOK TIME</span><span>40 Minutes</span>
                 </div>
               </div>
               <div class="specificMealType container">
-                <i class="fa-solid fa-utensils"></i><span>Meat</span>
+                <i class="fa-solid fa-utensils"></i><span>Pasta</span>
               </div>
             </div>
           </div>
@@ -113,7 +116,7 @@
               </tr>
               <tr>
                 <td>Total Fat</td>
-                <td style="text-align: right">18 g</td>
+                <td style="text-align: right">15 g</td>
               </tr>
               <tr>
                 <td>Protein</td>
@@ -121,22 +124,20 @@
               </tr>
               <tr>
                 <td>Carbohydrate</td>
-                <td style="text-align: right">45 g</td>
+                <td style="text-align: right">55 g</td>
               </tr>
               <tr>
                 <td>Cholesterol</td>
-                <td style="text-align: right">70 mg</td>
+                <td style="text-align: right">50 mg</td>
               </tr>
             </table>
           </div>
         </section>
         <section class="description">
           <p>
-            Spaghetti Bolognese is a classic Italian dish featuring al dente
-            spaghetti topped with a rich and savory meat sauce. The sauce is
-            made with ground beef, tomatoes, onions, garlic, and herbs, creating
-            a hearty and flavorful meal. Perfect for family dinners or special
-            occasions, this dish is a crowd-pleaser!
+            A classic Italian dish featuring al dente spaghetti topped with a
+            rich and savory meat sauce. This hearty meal is perfect for family
+            dinners and is sure to satisfy everyone at the table.
           </p>
         </section>
         <section class="ingredientAndRecommendations">
@@ -144,20 +145,20 @@
             <h2>Ingredients</h2>
             <form>
               <label
-                ><input type="checkbox" class="customCheckbox" /> 500g ground
-                beef</label
-              ><br />
-              <label
                 ><input type="checkbox" class="customCheckbox" /> 400g
                 spaghetti</label
+              ><br />
+              <label
+                ><input type="checkbox" class="customCheckbox" /> 500g ground
+                beef</label
               ><br />
               <label
                 ><input type="checkbox" class="customCheckbox" /> 1 onion,
                 finely chopped</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> 2 cloves
-                garlic, minced</label
+                ><input type="checkbox" class="customCheckbox" /> 2 garlic
+                cloves, minced</label
               ><br />
               <label
                 ><input type="checkbox" class="customCheckbox" /> 400g canned
@@ -180,36 +181,15 @@
                 pepper to taste</label
               ><br />
               <label
-                ><input type="checkbox" class="customCheckbox" /> Grated
-                Parmesan cheese for serving</label
+                ><input type="checkbox" class="customCheckbox" /> 2 tbsp olive
+                oil</label
               ><br />
             </form>
           </div>
           <div class="recommendations">
             <h4>You may also Like</h4>
             <div class="separate">
-              <!--start-->
-              <div class="recipe">
-                <a href="Apple_Pie.html">
-                  <img
-                    src="../images/food_samples/Apple_Pie.webp"
-                    alt="Apple Pie"
-                    loading="lazy"
-                  />
-                  <div class="separate little">
-                    <span class="title">Apple Pie</span>
-                    <div class="mainIngredients">
-                      <span class="heading">Main Ingredients:</span>
-                      <div class="mainIngredientList">
-                        <span class="mainIngredient">Apples</span>
-                        <span class="mainIngredient">Cinnamon</span>
-                        <span class="mainIngredient">Pie Crust</span>
-                      </div>
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <!--next recipe-->
+              <!-- start -->
               <div class="recipe">
                 <a href="Vegetable_Stir.html">
                   <img
@@ -222,57 +202,77 @@
                     <div class="mainIngredients">
                       <span class="heading">Main Ingredients:</span>
                       <div class="mainIngredientList">
-                        <span class="mainIngredient">Carrots</span>
                         <span class="mainIngredient">Broccoli</span>
+                        <span class="mainIngredient">Carrots</span>
                         <span class="mainIngredient">Soy Sauce</span>
                       </div>
                     </div>
                   </div>
                 </a>
               </div>
-              <!--next recipe-->
+              <!-- next recipe -->
               <div class="recipe">
-                <a href="French_Toast.html">
+                <a href="Eggplant_Parmesan.html">
                   <img
-                    src="../images/food_samples/French_Toast.webp"
-                    alt="French Toast"
+                    src="../images/food_samples/Eggplant_Parmesan.webp"
+                    alt="Eggplant Parmesan"
                     loading="lazy"
                   />
                   <div class="separate little">
-                    <span class="title">French Toast</span>
+                    <span class="title">Eggplant Parmesan</span>
                     <div class="mainIngredients">
                       <span class="heading">Main Ingredients:</span>
                       <div class="mainIngredientList">
-                        <span class="mainIngredient">Bread</span>
-                        <span class="mainIngredient">Eggs</span>
-                        <span class="mainIngredient">Milk</span>
+                        <span class="mainIngredient">Eggplant</span>
+                        <span class="mainIngredient">Tomato Sauce</span>
+                        <span class="mainIngredient">Cheese</span>
                       </div>
                     </div>
                   </div>
                 </a>
               </div>
-              <!--next recipe-->
+              <!-- next recipe -->
               <div class="recipe">
-                <a href="Chocolate_Cake.html">
+                <a href="Vegetable_Curry.html">
                   <img
-                    src="../images/food_samples/Chocolate_Cake.webp"
-                    alt="Chocolate Cake"
+                    src="../images/food_samples/Vegetable_Curry.webp"
+                    alt="Vegetable Curry"
                     loading="lazy"
                   />
                   <div class="separate little">
-                    <span class="title">Chocolate Cake</span>
+                    <span class="title">Vegetable Curry</span>
                     <div class="mainIngredients">
                       <span class="heading">Main Ingredients:</span>
                       <div class="mainIngredientList">
-                        <span class="mainIngredient">Cocoa Powder</span>
-                        <span class="mainIngredient">Flour</span>
-                        <span class="mainIngredient">Eggs</span>
+                        <span class="mainIngredient">Cauliflower</span>
+                        <span class="mainIngredient">Spinach</span>
+                        <span class="mainIngredient">Curry Powder</span>
                       </div>
                     </div>
                   </div>
                 </a>
               </div>
-              <!--next recipe-->
+              <!-- next recipe -->
+              <div class="recipe">
+                <a href="Roasted_Vegetables.html">
+                  <img
+                    src="../images/food_samples/Roasted_Vegetables.webp"
+                    alt="Roasted Vegetables"
+                    loading="lazy"
+                  />
+                  <div class="separate little">
+                    <span class="title">Roasted Vegetables</span>
+                    <div class="mainIngredients">
+                      <span class="heading">Main Ingredients:</span>
+                      <div class="mainIngredientList">
+                        <span class="mainIngredient">Zucchini</span>
+                        <span class="mainIngredient">Bell Peppers</span>
+                        <span class="mainIngredient">Olive Oil</span>
+                      </div>
+                    </div>
+                  </div>
+                </a>
+              </div>
             </div>
           </div>
         </section>
@@ -283,34 +283,35 @@
               <dt>1. Cook the Spaghetti</dt>
               <dd>
                 Bring a large pot of salted water to a boil. Add the spaghetti
-                and cook according to the package instructions until al dente.
-                Drain and set aside.
+                and cook according to package instructions until al dente. Drain
+                and set aside.
               </dd>
 
               <dt>2. Prepare the Sauce</dt>
               <dd>
-                In a large skillet, heat olive oil over medium heat. Add the
-                chopped onion and minced garlic, and sauté until softened and
+                Heat olive oil in a large skillet over medium heat. Add the
+                chopped onion and minced garlic, sautéing until softened and
                 fragrant, about 3-4 minutes.
               </dd>
 
-              <dt>3. Cook the Beef</dt>
+              <dt>3. Brown the Ground Beef</dt>
               <dd>
                 Add the ground beef to the skillet and cook until browned,
                 breaking it up with a spoon as it cooks. Drain any excess fat.
               </dd>
 
-              <dt>4. Add Tomatoes and Seasonings</dt>
+              <dt>4. Simmer the Sauce</dt>
               <dd>
-                Stir in the canned tomatoes, tomato paste, dried oregano, dried
-                basil, salt, and pepper. Simmer the sauce for 15-20 minutes,
-                stirring occasionally, until it thickens.
+                Stir in the canned tomatoes, tomato paste, oregano, basil, salt,
+                and pepper. Bring the sauce to a simmer and let it cook for
+                20-25 minutes, stirring occasionally.
               </dd>
 
               <dt>5. Combine and Serve</dt>
               <dd>
-                Add the cooked spaghetti to the skillet and toss to coat it with
-                the sauce. Serve hot, garnished with grated Parmesan cheese.
+                Add the cooked spaghetti to the skillet and toss to coat it
+                evenly with the sauce. Serve hot, garnished with grated Parmesan
+                cheese and fresh basil if desired.
               </dd>
             </dl>
           </div>
@@ -324,7 +325,7 @@
     </main>
     <footer>
       <span class="logo">Recipe</span>
-      <span>&copy;2025 | MOHAMMED ABDI </span>
+      <span>&copy;2025 | MOHAMMED ABDI</span>
     </footer>
   </body>
 </html>
